--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
           <ul>
             <li><a class="white-text" href="https://trello.com/">Trello</a></li>
             <li><a class="white-text" href="https://www.linkedin.com/in/antonio-navarro-4240b8150/">Linkdin</a></li>
+            <li><a class="white-text" href="webdevresume.pdf">Resume</a></li>
           </ul>
         </div>
       </div>
