--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
           <h4>About Me</h4>
           <p class="left-align light">
               I’m a web developer working in HTML, CSS, JS, Ruby on Rails, MongoDB, Express, React, and NodeJS. Here are some Projects I've worked on!
+              <br>
+              <p>navarroaa90@gmail.com</p>
         </p>
     
         </div>
